Add license files and source map for main JavaScript bundle
- Created LICENSE.txt containing licensing information for React and related libraries.
- Added source map file for main JavaScript bundle to improve debugging capabilities.