@@ -1,32 +1,31 @@
 package com.Smart_Campus_Operations_Hub.Campus_Hub.controller;
 
-import com.Smart_Campus_Operations_Hub.Campus_Hub.model.Notification;
-import com.Smart_Campus_Operations_Hub.Campus_Hub.security.CustomUserDetails;
-import com.Smart_Campus_Operations_Hub.Campus_Hub.service.NotificationService;
-import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.Map;
 
 @RestController
 @RequestMapping("/api/notifications")
-@RequiredArgsConstructor
 public class NotificationController {
 
-    private final NotificationService notificationService;
+    private final com.Smart_Campus_Operations_Hub.Campus_Hub.service.NotificationService notificationService;
+
+    public NotificationController(com.Smart_Campus_Operations_Hub.Campus_Hub.service.NotificationService notificationService) {
+        this.notificationService = notificationService;
+    }
 
     @GetMapping
-    public ResponseEntity<List<Notification>> getMyNotifications(@AuthenticationPrincipal CustomUserDetails userDetails) {
-        return ResponseEntity.ok(notificationService.getUserNotifications(userDetails.getId()));
+    public ResponseEntity<?> getMyNotifications(Authentication authentication) {
+        return ResponseEntity.ok(notificationService.getUserNotifications(getCurrentUserId(authentication)));
     }
 
     @GetMapping("/unread-count")
-    public ResponseEntity<Map<String, Long>> getUnreadCount(@AuthenticationPrincipal CustomUserDetails userDetails) {
-        long count = notificationService.getUnreadCount(userDetails.getId());
-        return ResponseEntity.ok(Map.of("unreadCount", count));
+    public ResponseEntity<Map<String, Long>> getUnreadCount(Authentication authentication) {
+        long count = notificationService.getUnreadCount(getCurrentUserId(authentication));
+        return ResponseEntity.ok(Collections.singletonMap("unreadCount", count));
     }
 
     @PatchMapping("/{id}/read")
@@ -36,8 +35,20 @@ public class NotificationController {
     }
 
     @PatchMapping("/read-all")
-    public ResponseEntity<?> markAllAsRead(@AuthenticationPrincipal CustomUserDetails userDetails) {
-        notificationService.markAllAsRead(userDetails.getId());
+    public ResponseEntity<?> markAllAsRead(Authentication authentication) {
+        notificationService.markAllAsRead(getCurrentUserId(authentication));
         return ResponseEntity.ok().build();
+    }
+
+    private String getCurrentUserId(Authentication authentication) {
+        Object principal = authentication.getPrincipal();
+
+        if (principal instanceof com.Smart_Campus_Operations_Hub.Campus_Hub.security.CustomUserDetails) {
+            com.Smart_Campus_Operations_Hub.Campus_Hub.security.CustomUserDetails userDetails =
+                    (com.Smart_Campus_Operations_Hub.Campus_Hub.security.CustomUserDetails) principal;
+            return userDetails.getId();
+        }
+
+        throw new IllegalStateException("Unexpected authenticated principal: " + principal.getClass().getName());
     }
 }
